--- a/src/components/social_media/social_media.module.scss
+++ b/src/components/social_media/social_media.module.scss
@@ -6,12 +6,12 @@
     width: 35px;
     height: 35px;
     @include flexCenter;
-    border: 2px solid $color_o2;
+    border: 2px solid white;
     border-radius: 50%;
     gap: 10px;
 
     &:hover {
-      background-color: $color_o5;
+      background-color: $color_p1;
       transform: scale(1.2);
       // img {
       //   filter: invert(1);
@@ -26,4 +26,5 @@
   .twitter {
     padding: 7px;
   }
+
 }
