--- a/src/components/screens/home/sections/how_it_works/how_it_works.module.scss
+++ b/src/components/screens/home/sections/how_it_works/how_it_works.module.scss
@@ -44,31 +44,58 @@
 
   img {
     position: absolute;
-    top: -10px;
-    left: 220px;
-    width: 200px;
+    top: 5%;
+    left: 60%;
+    width: 10vw;
     z-index: 10;
 
     opacity: 0.8;
     &.two {
       transform: rotateX(180deg);
-      top: -80px;
+      top: unset;
+      bottom: 55%;
     }
   }
 
-  @include respond-below(md) {
+  @include respond-below(xxl) {
+    // display: none;
     img {
+      width: 12vw;
       &.two {
-        display: none;
+        top: unset;
+        bottom: 60%;
       }
     }
   }
-  @include respond-below(sm) {
+
+  // @include respond-below(xl) {
+  //   // display: none;
+  //   img {
+  //     width: 12vw;
+  //     &.two {
+  //       top: unset;
+  //       bottom: 55%;
+  //     }
+  //   }
+  // }
+  @include respond-below(lg) {
+    // display: none;
+    img {
+      width: 180px;
+      &.two {
+        display: none;
+
+      }
+    }
+  }
+  @include respond-below(md) {
+    // display: none;
     img {
       transform: rotate(90deg);
       left: unset;
       right: 30px;
       top: unset;
+      width: 150px;
 
       &.two {
         display: initial;
