--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: #232b35;
-  background-color: #28282B ;
+  background-color: #28282b;
   // margin-top: 300px;
   padding: 50px 0;
   font-size: 15px;
@@ -18,8 +18,9 @@
       flex-direction: column;
       gap: 16px;
 
-      img {
+      .logo {
         border-radius: 10px;
+        background-color: white;
       }
 
       p {
@@ -37,13 +38,13 @@
       a {
         color: $color_g2;
 
-        span{
+        span {
           display: none;
         }
         &:hover {
           color: white;
 
-          span{
+          span {
             display: unset;
           }
         }
@@ -51,7 +52,7 @@
     }
   }
 
-  hr{
+  hr {
     color: $color_p1;
   }
 }
