--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -1,13 +1,14 @@
 .footer {
   background-color: #232b35;
+  background-color: #28282b;
   // margin-top: 300px;
   padding: 50px 0;
-
   font-size: 15px;
-  color: rgb(227, 227, 227);
+  color: $color_g2;
 
   h4 {
-    color: $color_o3;
+    // color: $color_p1;
+    color: white;
   }
 
   .sec {
@@ -16,7 +17,15 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
-      
+
+      .logo {
+        border-radius: 10px;
+        background-color: white;
+      }
+
+      p {
+        font-size: 14px;
+      }
 
       @include respond-below(sm) {
         align-items: center;
@@ -27,11 +36,23 @@
     .links {
       margin: 16px 0;
       a {
-        color: white;
+        color: $color_g2;
+
+        span {
+          display: none;
+        }
         &:hover {
-          color: $color_o4;
+          color: white;
+
+          span {
+            display: unset;
+          }
         }
       }
     }
+  }
+
+  hr {
+    color: $color_p1;
   }
 }
