--- a/src/components/screens/employer/update/update.module.scss
+++ b/src/components/screens/employer/update/update.module.scss
@@ -15,7 +15,7 @@
       padding: 20px;
       border-radius: 10px;
 
-      @include respond-below(sm){
+      @include respond-below(sm) {
         width: 90%;
       }
 
@@ -42,44 +42,11 @@
         gap: 10px;
         margin-top: 20px;
       }
-
-      .select {
-        background-color: $color_g1;
-        padding: 10px;
-        border-radius: 10px;
-        text-align: center;
-        font-size: 14px;
-
-        > div {
-          display: flex;
-          justify-content: space-around;
-          margin-top: 8px;
-
-          > p {
-            font-size: 13px;
-            cursor: pointer;
-            background-color: white;
-            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-            padding: 5px 20px;
-            border-radius: 5px;
-            svg {
-              font-size: 12px;
-              margin-bottom: 3px;
-              margin-right: 4px;
-              transition-duration: 0s;
-            }
-
-            &:hover {
-              background-color: $color_g2;
-            }
-
-            &.active {
-              background-color: $color_p2;
-              color: white;
-            }
-          }
-        }
-      }
     }
+  }
+
+  .link {
+    transform: rotate(-20deg);
+    color: $color_link_blue;
   }
 }
