--- a/src/components/ui/tabs/tabs.module.scss
+++ b/src/components/ui/tabs/tabs.module.scss
@@ -6,17 +6,19 @@
   top: -15px;
   background-color: white;
   z-index: 99;
-  // margin-bottom: 10px;
+  margin-bottom: 10px;
 
-  @include respond-below(md) {
-    position: fixed;
-    top: unset;
-    bottom: 0;
-    margin: 0;
-    width: 100dvw;
-    left: 0;
-    border-bottom: none;
-    border-top: 2px solid $color_g1;
-    justify-content: center;
+  &.goBottom {
+    @include respond-below(md) {
+      position: fixed;
+      top: unset;
+      bottom: 0;
+      margin: 0;
+      width: 100dvw;
+      left: 0;
+      border-bottom: none;
+      border-top: 2px solid $color_g1;
+      justify-content: center;
+    }
   }
 }
