--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,3 +18,9 @@ p {
   margin: 0;
   padding: 0;
 }
+
+.dropdown-menu{
+  padding:0;
+  border-radius:0;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
