--- a/src/components/layout/header/main_header/main_header.module.scss
+++ b/src/components/layout/header/main_header/main_header.module.scss
@@ -18,8 +18,8 @@
       background-repeat: no-repeat;
 
       @include respond-below(md) {
-        background-image: url("/logo/logo_s.png");
-        width: 50px;
+        // background-image: url("/logo/logo_s.png");
+        width: 180px;
       }
     }
 
