--- a/src/components/layout/header/top_header/header_drawer/header_drawer.module.scss
+++ b/src/components/layout/header/top_header/header_drawer/header_drawer.module.scss
@@ -13,14 +13,18 @@
     width: 100%;
     a {
       width: 100%;
-      padding: 10px;
+      padding: 8px;
       font-size: 17px;
       color: black;
-      &:hover,
+      border-bottom: 3px solid transparent;
       &.active {
-        background-color: $color_o5;
-        color: white;
+        color: $color_p1;
+        border-bottom: 3px solid $color_p1;
         font-weight: 600;
+      }
+
+      &:hover{
+        color: $color_p1;
       }
     }
   }
