--- a/src/components/ui/loading_screen/loading_screen.module.scss
+++ b/src/components/ui/loading_screen/loading_screen.module.scss
@@ -3,9 +3,8 @@
   position: fixed;
   width: 100dvw;
   height: 100dvh;
+  top: 0;
+  left: 0;
   @include flexCenter;
-
-  &.noBg {
-    background-color: transparent;
-  }
+  z-index: 1000;
 }
