--- a/src/components/screens/candidates/portal/request/buy_request/buy_request.module.scss
+++ b/src/components/screens/candidates/portal/request/buy_request/buy_request.module.scss
@@ -3,6 +3,10 @@
   margin: 20px;
   border-radius: 10px;
 
+  &.disabled {
+    opacity: 0.7;
+  }
+
   .reco {
     border-radius: 10px 10px 0 0;
     color: white;
