--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/add_industry/add_industry.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/add_industry/add_industry.module.scss
@@ -1,4 +1,18 @@
-.btns{
-    display: flex;
-    justify-content: space-between;
+.btns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.newSkill {
+  position: relative;
+
+  svg {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: rgb(192, 22, 22);
+    border-radius: 50%;
+    color: white;
+    cursor: pointer;
+  }
 }
