--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/manage_skills.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/manage_skills.module.scss
@@ -7,8 +7,14 @@
     margin: 0 20px 20px 0;
     padding: 20px;
     border-radius: 10px;
-    width: fit-content;
-    min-width: fit-content;
-    max-width: fit-content;
+    width: 400px;
+    // height: 100%;
+    // margin-bottom: 20px;
+  }
+
+  @include respond-below(sm) {
+    .industry {
+      width: 300px;
+    }
   }
 }
