--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/manage_skills/manage_skills.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/manage_skills/manage_skills.module.scss
@@ -2,3 +2,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+.skill {
+  svg {
+    color: rgb(207, 14, 14);
+    cursor: pointer;
+  }
+  margin-bottom: 10px;
+}
