free jobs upload feature

--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/manage_skills.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/manage_skills.module.scss
@@ -1,7 +1,6 @@
 .ManageSkills {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 20px;
+  height: 100%;
+  width: 100%;
   .industry {
     border: 1px solid $color_g2;
     margin: 0 20px 20px 0;
@@ -17,4 +16,8 @@
       width: 300px;
     }
   }
+
+  // .wrap {
+  //   display: flex;
+  // }
 }
