--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/industry_list/industry_list.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/industry_list/industry_list.module.scss
@@ -3,7 +3,11 @@
   flex-direction: column;
 
   border-right: 1px solid $color_g2;
-  height: 100%;
+  height: calc(100vh - 200px);
+  max-height: calc(100vh - 200px);
+  min-height: calc(100vh - 200px);
+  overflow-y: auto;
+
   padding: 0 10px 10px 10px;
 
   button{
