--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/skills_list/skills_list.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/skills_list/skills_list.module.scss
@@ -1,3 +1,11 @@
-.currentIndustry {
- 
+.top {
+  display: flex;
+  gap: 20px;
+}
+
+.SkillsList{
+    height: calc(100vh - 200px);
+    max-height: calc(100vh - 200px);
+    min-height: calc(100vh - 200px);
+    overflow-y: auto;
 }
