--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/skills_list/jobs_list/jobs_list.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/skills_list/jobs_list/jobs_list.module.scss
@@ -1,8 +1,32 @@
-.toggleActive {
-  font-size: 15px;
-  text-decoration: underline;
-  color: blue;
-  cursor: pointer;
-  margin: 0 0 10px auto;
-  width: fit-content;
+.JobsList {
+  .toggleActive {
+    font-size: 15px;
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
+    margin: 0 0 10px auto;
+    width: fit-content;
+  }
+
+  .jobRow {
+    .action {
+      // @include flexCenter;
+      svg {
+        color: rgb(185, 15, 15);
+        cursor: pointer;
+        font-size: 20px;
+      }
+    }
+  }
+
+  .title {
+    text-align: center;
+    font-size: 18px;
+    text-decoration: underline;
+  }
+
+  hr {
+    opacity: 1;
+    border-color: $color_p1;
+  }
 }
