delete skills changes

--- a/src/components/screens/admin/tabs/default_jobs/manage_skills/skills_list/jobs_list/jobs_list.module.scss
+++ b/src/components/screens/admin/tabs/default_jobs/manage_skills/skills_list/jobs_list/jobs_list.module.scss
@@ -1,11 +1,18 @@
 .JobsList {
   .toggleActive {
     font-size: 15px;
-    text-decoration: underline;
-    color: blue;
-    cursor: pointer;
+
     margin: 0 0 10px auto;
     width: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    p {
+      text-decoration: underline;
+      color: blue;
+      cursor: pointer;
+    }
   }
 
   .jobRow {
