--- a/src/components/screens/employer/portal/tabs/manage_jobs/job_form/add_industry/add_industry.module.scss
+++ b/src/components/screens/employer/portal/tabs/manage_jobs/job_form/add_industry/add_industry.module.scss
@@ -16,3 +16,12 @@
     cursor: pointer;
   }
 }
+
+.indToggle {
+  color: blue;
+  text-decoration: underline;
+  font-size: 14px;
+  cursor: pointer;
+  margin: 6px 0 0 auto;
+  width: fit-content;
+}
