--- a/src/components/screens/home/sections/news_letter/new_letter.module.scss
+++ b/src/components/screens/home/sections/news_letter/new_letter.module.scss
@@ -5,8 +5,13 @@
     padding: 100px 0;
 
     h2 {
-      font-size: 40px;
+        font-size: 45px;
+        font-weight: bold;
       color: white;
+
+      span{
+        color: $color_p2;
+      }
     }
 
     p {
