--- a/src/components/screens/home/sections/vacancies/vacancies.module.scss
+++ b/src/components/screens/home/sections/vacancies/vacancies.module.scss
@@ -1,5 +1,14 @@
 .CategorySection {
   padding: 50px 0;
+  h2 {
+    font-size: 45px;
+    font-weight: bold;
+    color: $color_p2;
+
+    > span {
+      color: $color_p1;
+    }
+  }
 }
 
 .VCard {
