--- a/src/components/screens/home/sections/banner/banner.module.scss
+++ b/src/components/screens/home/sections/banner/banner.module.scss
@@ -9,10 +9,10 @@
 
     .left {
       padding: 100px 50px 0 0;
-      width: 60%;
+      width: 50%;
 
       h1 {
-        font-size: 75px;
+        font-size: 70px;
         font-weight: 600;
         color: $color_p2;
 
@@ -28,10 +28,10 @@
     }
 
     .right {
-      width: 40%;
-      background-image: url("/assets/hero_bg_circle.png");
-      background-size: contain;
-      background-repeat: no-repeat;
+      width: 50%;
+      // background-image: url("/assets/hero_bg_circle.png");
+      // background-size: contain;
+      // background-repeat: no-repeat;
       position: relative;
 
       .card {
