new admin panel

--- a/src/components/layout/header/top_header/tom_header.module.scss
+++ b/src/components/layout/header/top_header/tom_header.module.scss
@@ -29,4 +29,12 @@
       }
     }
   }
+
+
+  .wrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+  }
 }
