--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -12,6 +12,7 @@ $color_p1_mild: #ea205344;
 $color_g1: #f1f2f4;
 $color_g2: #a3aab2;
 $color_g3: #5a5e63;
+$color_g4: #80858b62;
 
 $color_link_blue: rgb(0, 123, 255);
 
