--- a/src/components/ui/custom_button/custom_button.module.scss
+++ b/src/components/ui/custom_button/custom_button.module.scss
@@ -1,10 +1,16 @@
 .customButton {
-  padding: 6px 20px;
+  padding: 2px 16px;
   outline: none;
   height: fit-content !important;
   border-radius: 5px;
   border-width: 1px;
   border-style: solid;
+
+  svg {
+    font-size: 14px;
+    margin-bottom: 2px;
+    margin-left: 4px;
+  }
   &.wFull {
     width: 100%;
   }
@@ -35,12 +41,12 @@
     color: $color_p1;
     border-color: $color_p1;
 
-    &:hover {
-      &:not(&:disabled) {
-        color: white;
-        background-color: $color_p1;
-      }
-    }
+    // &:hover {
+    //   &:not(&:disabled) {
+    //     color: white;
+    //     background-color: $color_p1;
+    //   }
+    // }
   }
 
   &.v3 {
