--- a/src/components/ui/select/custom_select/custom_select.module.scss
+++ b/src/components/ui/select/custom_select/custom_select.module.scss
@@ -15,10 +15,12 @@
   &.v1 {
     select {
       cursor: pointer;
-      padding: 10px 16px;
       border-radius: 4px;
       outline: none !important;
       width: 100%;
+      padding: 6px 12px;
+      font-size: 15px;
+      margin-bottom: 12px;
       background-color: white;
 
       border: 1px solid $color_g2;
