--- a/src/components/ui/tabs/tabs.module.scss
+++ b/src/components/ui/tabs/tabs.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   border-bottom: 1px solid $color_g1;
   flex-wrap: wrap;
-  position: sticky;
-  top: -15px;
+  // position: sticky;
+  // top: -15px;
   background-color: white;
   z-index: 99;
   margin-bottom: 10px;
