--- a/src/components/screens/home/sections/banner/banner.module.scss
+++ b/src/components/screens/home/sections/banner/banner.module.scss
@@ -80,8 +80,11 @@
 
       .right {
         width: 100%;
+        margin-top: 50px;
+        
 
-        .card{
+        .card {
+          top: 20px;
           left: 20px;
         }
       }
