--- a/src/components/ui/job/job_card/job_card.module.scss
+++ b/src/components/ui/job/job_card/job_card.module.scss
@@ -1,9 +1,10 @@
 .JobCard {
 
   border: 2px solid $color_g1;
-  padding: 16px 20px;
+  padding: 10px 20px;
   margin-bottom: 20px;
   border-radius: 16px;
+  min-width: 300px;
 //   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 //   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
