dynamic about candidate

--- a/src/components/screens/about/sections/clients/clients.module.scss
+++ b/src/components/screens/about/sections/clients/clients.module.scss
@@ -1,6 +1,7 @@
 .ClientsSection {
   position: relative;
-  margin-bottom: 150px;
+  margin-bottom: 100px;
+  padding-top: 100px;
 
   .wrap {
     min-height: 700px;
