--- a/src/components/screens/about/sections/count/count.module.scss
+++ b/src/components/screens/about/sections/count/count.module.scss
@@ -5,7 +5,7 @@
   // background-image: linear-gradient( white,$color_p1);
   background-color: #ea205309;
   padding: 20px;
-  margin-bottom: 50px;
+  margin: 50px 0;
 
   h2 {
     color: $color_p1;
