--- a/src/components/screens/home/sections/discover/discover.module.scss
+++ b/src/components/screens/home/sections/discover/discover.module.scss
@@ -69,7 +69,7 @@
   .Ctop {
     margin-bottom: 20px;
     p {
-      font-size: 24px;
+      font-size: 22px;
       margin-top: 24px;
     }
 
@@ -85,7 +85,8 @@
   }
 
   .text {
-    font-size: 24px;
+    font-size: 22px;
+    color: rgb(74, 74, 74);
   }
 
   @include respond-below(md) {
