--- a/src/components/screens/home/sections/register/register.module.scss
+++ b/src/components/screens/home/sections/register/register.module.scss
@@ -1,9 +1,18 @@
 .RegisterSection {
   padding: 100px 0 50px 0;
+
+  .c{
+    margin-bottom: 20px;
+  }
   .card {
     padding: 20px;
     margin-bottom: 50px;
     border-radius: 16px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
 
     h2 {
       margin: 0;
@@ -15,7 +24,7 @@
     p {
       margin: 20px 0;
       font-size: 15px;
-      width: 300px;
+      max-width: 400px;
     }
 
     &.card1 {
