--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -1,6 +1,7 @@
 .footer {
-  background-color: #232b35;
-  background-color: #28282b;
+  // background-color: #232b35;
+  background-color: #2a225b;
+  // background-color: red;
   // margin-top: 300px;
   padding: 50px 0;
   font-size: 15px;
