--- a/src/components/screens/home/sections/jobs/jobs.module.scss
+++ b/src/components/screens/home/sections/jobs/jobs.module.scss
@@ -92,3 +92,62 @@
     }
   }
 }
+
+.enqModal {
+  div[class="modal-content"] {
+    border-radius: 0;
+    border: none;
+    outline: none;
+  }
+
+  .head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+
+    svg {
+      font-size: 24px;
+      cursor: pointer;
+    }
+  }
+}
+.form {
+  .controls {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    .agree {
+      font-size: 14px;
+      color: $color_g3;
+      display: flex;
+      align-items: center;
+      p {
+        margin-top: -2px;
+        margin-left: 5px;
+      }
+
+      span {
+        color: rgba(0, 0, 255, 0.708);
+        cursor: pointer;
+      }
+    }
+  }
+
+  .signup {
+    button {
+      width: 100%;
+    }
+    .divider {
+      display: flex;
+      align-items: center;
+      small {
+        margin: 10px;
+      }
+      hr {
+        width: 100%;
+      }
+    }
+  }
+}
