--- a/src/components/jobs/job_details/job_details.module.scss
+++ b/src/components/jobs/job_details/job_details.module.scss
@@ -146,11 +146,16 @@
           }
         }
 
-        .box3{
+        .box3 {
           display: flex;
           flex-direction: column;
           gap: 10px;
-          
+          &.hidden {
+            small,
+            strong {
+              filter: blur(2.5px);
+            }
+          }
         }
       }
 
@@ -164,6 +169,10 @@
 
         p {
           color: $color_g3;
+        }
+
+        .hidden {
+          filter: blur(2.4px);
         }
       }
       @include respond-below(xl) {
