--- a/src/components/ui/custom_button/custom_button.module.scss
+++ b/src/components/ui/custom_button/custom_button.module.scss
@@ -1,5 +1,5 @@
 .customButton {
-  padding: 8px 20px;
+  padding: 4px 16px;
   outline: none;
   height: fit-content !important;
   border-radius: 2px;
@@ -53,5 +53,11 @@
     background-color: transparent;
     border: none;
     color: $color_p1;
+  }
+
+  &.v5 {
+    background-color: $color_s1;
+    border: none;
+    color: white;
   }
 }
