--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -7,6 +7,8 @@ $color_p1: #2a235a;
 $color_p2: #2a235a;
 $color_p1: #ea2054;
 
+$color_s1: #019c49;
+
 $color_p1_mild: #ea205309;
 $color_p1_mild2: rgba(234, 32, 83, 0.2);
 
