--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -89,3 +89,14 @@
     }
   }
 }
+
+
+.badge{
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  font-size: 14px;
+  padding: 4px;
+  border-radius: 50%;
+}
