--- a/src/components/layout/header/main_header/user/header_profile/header_profile.module.scss
+++ b/src/components/layout/header/main_header/user/header_profile/header_profile.module.scss
@@ -1,6 +1,5 @@
 .HeaderProfile {
   position: relative;
-  
   .dp {
     background-color: $color_p1;
     height: 35px;
@@ -16,6 +15,7 @@
     position: absolute;
     background-color: white;
     right: 0;
+    z-index: 100;
     border-radius: 5px;
     width: 250px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
