--- a/src/components/ui/tabs/tabs.module.scss
+++ b/src/components/ui/tabs/tabs.module.scss
@@ -17,6 +17,6 @@
     left: 0;
     border-bottom: none;
     border-top: 2px solid $color_g1;
-    justify-content: center;
+    justify-content: space-evenly;
   }
 }
