--- a/src/components/ui/main_frame/main_frame.module.scss
+++ b/src/components/ui/main_frame/main_frame.module.scss
@@ -1,15 +1,18 @@
 .MainFrame {
   padding: 20px;
   width: 100%;
-  height: calc(100dvh - 178px);
+  height: calc(100dvh - 120px);
   overflow-y: auto;
 
-  @include respond-below(sm){
+  @include respond-below(sm) {
     padding: 12px;
   }
 }
 
 .head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   h3 {
     font-size: 25px;
   }
