--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -13,8 +13,10 @@ $color_p1_mild: #ea205309;
 $color_p1_mild2: rgba(234, 32, 83, 0.2);
 
 $color_g1: #f5f5f5;
+// $color_g1: #;
 $color_g2: #a3aab2;
 $color_g3: #5a5e63;
+$color_g4: #dddddd;
 
 $color_link_blue: rgb(0, 123, 255);
 
