--- a/src/components/screens/candidates/portal/profile/profile.module.scss
+++ b/src/components/screens/candidates/portal/profile/profile.module.scss
@@ -2,9 +2,52 @@
   form {
     > div {
       display: grid;
-      grid-template-columns: calc(50% - 10px) calc(50% - 10px);
-      gap: 20px;
-      margin-bottom: 20px;
+      grid-template-columns: calc(50% - 15px) calc(50% - 15px);
+      gap: 16px;
+      margin-bottom: 16px;
+    }
+
+    .resumes {
+      .resume {
+        padding: 16px;
+        min-width: 180px;
+        max-width: 300px;
+        display: flex;
+        justify-content: space-between;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+        a {
+          svg {
+            margin-right: 10px;
+            font-size: 20px;
+            color: rgb(182, 11, 11);
+          }
+        }
+
+        svg {
+          font-size: 20px;
+          cursor: pointer;
+          color: red;
+        }
+      }
+
+      .preview {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+      }
+    }
+  }
+
+  @include respond-below(md) {
+    form {
+      > div {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .skills {
+        margin-bottom: 20px;
+      }
     }
   }
 }
