--- a/src/components/ui/contol_label/control_label.module.scss
+++ b/src/components/ui/contol_label/control_label.module.scss
@@ -1,4 +1,6 @@
 .ControlLabel {
-  // color: ;
-  font-size: 15px;
+  font-size: 16px;
+  color: $color-g3;
+  margin-bottom: 4px;
+  display: block;
 }
