--- a/src/components/ui/select/custom_select/custom_select.module.scss
+++ b/src/components/ui/select/custom_select/custom_select.module.scss
@@ -1,4 +1,5 @@
 .CustomSelect {
+  background-color: white;
   select {
     &:required {
       &:invalid {
@@ -15,13 +16,20 @@
   &.v1 {
     select {
       cursor: pointer;
-      padding: 10px 16px;
-      border-radius: 4px;
+      padding: 8px 16px;
+      border-radius: 1px;
       outline: none !important;
       width: 100%;
       background-color: white;
+      // border: none;
+      // box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+      // box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+      // box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
 
-      border: 1px solid $color_g2;
+      // box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
+      //   rgb(209, 213, 219) 0px 0px 0px 1px inset;
+
+      border: 1px solid $color_g4;
 
       &:active,
       &:focus,
