--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@
   scroll-behavior: smooth !important;
 }
 
+body {
+  background-color: #fdfdfd;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -19,8 +23,8 @@ p {
   padding: 0;
 }
 
-.dropdown-menu{
-  padding:0;
-  border-radius:0;
+.dropdown-menu {
+  padding: 0;
+  border-radius: 0;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
