--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -56,4 +56,35 @@
   hr {
     color: $color_p1;
   }
+
+  .legal {
+    display: flex;
+    justify-content: space-between;
+    > div {
+      display: flex;
+      gap: 20px;
+
+      * {
+        color: $color_g2;
+      }
+
+      a {
+        &:hover {
+          color: $color_p1;
+        }
+      }
+    }
+  }
+
+  @include respond-below(md) {
+    .legal {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      > div {
+        font-size: 14px;
+        gap: 10px;
+      }
+    }
+  }
 }
