--- a/src/components/screens/home/sections/how_it_works/how_it_works.module.scss
+++ b/src/components/screens/home/sections/how_it_works/how_it_works.module.scss
@@ -50,7 +50,7 @@
     background-color: white;
 
     .ico {
-      background-color: #25D366;
+      background-color: #25d366;
       svg {
         color: white;
       }
