--- a/src/components/screens/candidates/portal/jobs/no_jobs/no_jobs.module.scss
+++ b/src/components/screens/candidates/portal/jobs/no_jobs/no_jobs.module.scss
@@ -1,12 +1,12 @@
-.NoJobs {
-  height: 70%;
-  @include flexCenter;
-  flex-direction: column;
-  gap: 16px;
-  text-align: center;
+// .NoJobs {
+//   height: 70%;
+//   @include flexCenter;
+//   flex-direction: column;
+//   gap: 16px;
+//   text-align: center;
 
-  .check {
-    color: $color_p1;
-    font-size: 50px;
-  }
-}
+//   .check {
+//     color: $color_p1;
+//     font-size: 50px;
+//   }
+// }
