--- a/src/components/screens/home/sections/jobs/jobs.module.scss
+++ b/src/components/screens/home/sections/jobs/jobs.module.scss
@@ -31,6 +31,10 @@
   margin-bottom: 50px;
   height: 300px;
 
+  .logo {
+    border-radius: 50%;
+    overflow: hidden;
+  }
   .label {
     color: $color_g2;
     font-weight: lighter;
@@ -93,5 +97,3 @@
     }
   }
 }
-
-
